src/app/comparison/components/telemetry-canvas/telemetry-canvas.component.scss
:host {
  display: block;
  width: 100%;
  height: 100%;
}

svg {
  width: 100%;
  height: 100%;
  display: block;
}

.plot-background {
  //   fill: #090909;
  fill: #111111;
}

.grid line,
.vertical-grid line {
  stroke: rgba(255, 255, 255, 0.2);
  stroke-width: 1;
}

.grid path,
.vertical-grid path {
  display: none;
}

.x-axis line,
.x-axis path {
  stroke: rgba(255, 255, 255, 0.55);
}

.y-axis line {
  stroke: rgba(255, 255, 255, 0.55);
}

.y-axis path {
  display: none;
}

.x-axis text,
.y-axis text {
  fill: #d7d7d7;
  font-size: 10px;
}

.axis-title {
  fill: #d7d7d7;
  font-family: "Formula1", system-ui, sans-serif;
  font-size: 11px;
  font-weight: 400;
}

.telemetry-wrapper {
  position: relative;
  width: 100%;
  height: 100%;
}

.telemetry-tooltip {
  position: absolute;

  width: 110px;

  padding: 8px 10px;

  background: #181818;

  border: 2px solid #00e5d4;
  border-radius: 8px;

  color: white;

  font-family: "Formula1";
  font-size: 8px;

  pointer-events: none;
  z-index: 50;
}

.distance {
  font-size: 12px;
  margin-bottom: 7px;
}

.row {
  display: flex;

  justify-content: space-between;

  align-items: center;

  gap: 10px;

  margin-bottom: 4px;

  line-height: 1.2;

  font-size: 12px;
}

.driver {
  font-family: "Formula1";
}

.telemetry-tooltip.speed {
  top: 28px;
}

.telemetry-tooltip.delta {
  top: 180px;
}

.telemetry-tooltip.rpm {
  top: 280px;
}

.telemetry-tooltip.throttle {
  top: 365px;
}

.telemetry-tooltip.brake {
  top: 455px;
}

